# secp256k1

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  autogen.sh  autoinstall.sh
contrib/: lax_der_parsing.c  lax_der_parsing.h
src/: CMakeLists.txt  tests.c
